--- a/views/lose.mustache
+++ b/views/lose.mustache
@@ -10,6 +10,16 @@
   <body>
     <div class="">
       You lose!!!
+        <br>
+        <p>Answer: </p>
+      {{word}}
+      <br>
+      {{displayWord}}
+
+      
+      <br>
+      <p>Used Letters:</p>
+      {{usedLetters}}
     </div>
     <script src="app.js"></script>
   </body>
